<resources>
    <string name="app_name">zd2_KMA</string>
    <string name="world_cinema">WorldCinema</string>
    <string name="you_example_com">you@example.com</string>
    <string name="password">Ваш пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="pass">Пароль</string>
    <string name="enter">Войти</string>
    <string name="obs">Обсуждения</string>
    <string name="star">Избранное</string>
    <string name="talks">Обсуждения</string>
    <string name="_new">Новое</string>
    <string name="witcher">Witcher</string>
    <string name="jessica_jones">Jessica Jones</string>
    <string name="magicians">Magicians</string>
    <string-array name="series">
        <item>Lucifer</item>
        <item>The Witcher</item>
        <item>LOST</item>
        <item>The Magicans</item>
    </string-array>
</resources>