<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoviesActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/_new"
        android:textColor="@color/blue"
        android:layout_marginTop="32sp"
        android:textSize="14sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="120sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginStart="22sp"
        android:layout_marginEnd="22sp"
        android:layout_marginTop="8sp"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:background="@drawable/frame">
                <ImageView
                    android:id="@+id/i1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:layout_width="32sp"
                    android:layout_height="32sp"
                    android:src="@drawable/uil_play"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/witcher"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="12sp"
                    android:layout_marginBottom="8sp"/>
            </FrameLayout>
            <FrameLayout
                android:layout_marginTop="16sp"
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:background="@drawable/frame">
                <ImageView
                    android:id="@+id/i2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:layout_width="32sp"
                    android:layout_height="32sp"
                    android:src="@drawable/uil_play"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jessica_jones"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="12sp"
                    android:layout_marginBottom="8sp"/>
            </FrameLayout>
            <FrameLayout
                android:layout_marginTop="16sp"
                android:layout_width="match_parent"
                android:layout_height="90sp"
                android:background="@drawable/frame">
                <ImageView
                    android:id="@+id/i3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
                <ImageView
                    android:layout_width="32sp"
                    android:layout_height="32sp"
                    android:src="@drawable/uil_play"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magicians"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="12sp"
                    android:layout_marginBottom="8sp"/>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>